// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pull-request-review-handler assigns milestones to pull requests assigns a milestone to an approved pull request 1`] = `
Array [
  Object {
    "issue_number": 40,
    "milestone": 310,
    "owner": "nerrad",
    "repo": "tests",
  },
]
`;

exports[`pull-request-review-handler assigns milestones to pull requests ignore bumpStrategy 1`] = `
Array [
  Object {
    "issue_number": 40,
    "milestone": 300,
    "owner": "nerrad",
    "repo": "tests",
  },
]
`;

exports[`pull-request-review-handler assigns milestones to pull requests major bumpStrategy 1`] = `
Array [
  Object {
    "issue_number": 40,
    "milestone": 400,
    "owner": "nerrad",
    "repo": "tests",
  },
]
`;

exports[`pull-request-review-handler assigns milestones to pull requests minor bumpStrategy 1`] = `
Array [
  Object {
    "issue_number": 40,
    "milestone": 310,
    "owner": "nerrad",
    "repo": "tests",
  },
]
`;
